Version 2.03.28 - 
==================

Version 2.03.27 - 02nd October 2024
===================================
  Fix swap device size detection using blkid for lvresize/lvreduce/lvextend.
  Detect GPT partition table and pass partition filter if no partitions defined.
  Add global/sanlock_align_size option to configure sanlock lease size.
  Disable mem locking when activation/reserved_stack or reserved_memory is 0.
  Fix locking issues in lvmlockd leaving thin pool locked.
  Deprecate vdo settings vdo_write_policy and vdo_write_policy.
  Lots of typo fixes across lvm2 code base (codespell).
  Corrected integrity parameter interleave_sectors for DM table line.
  Ignore -i|--stripes, -I|--stripesize for lvextend on raid0 LV, like raid10.
  Do not accept duplicate device names for pvcreate.

Version 2.03.26 - 23rd August 2024
==================================
  Fix internal error reported by pvmove on a VG with single PV.
  Also accept --mknodes --refresh for vgscan.
  Fix vgmknodes --refresh to wait for udev before checking /dev content.
  Use log/report_command_log=1 config setting by default for JSON output format.
  Fix unreleased memory pools on RAID lvextend.
  Add --integritysettings option to manipulate dm-integrity settings.

Version 2.03.25 - 12nd July 2024
================================
  Utilize more radix_tree instead of dm_hash and btree.
  Refactor DM uuid caching from device_mapper directory.
  Enhance checking for DM uuid device.
  Fix lvm shell command completion on tab key (2.03.24).
  Avoid lockd_vg call to lvmlockd for local VGs.
  Allow forced change of locktype from none.
  Handle OPTIONS defined in /etc/sysconfig/lvmlockd.

Version 2.03.24 - 16th May 2024
===============================
  Lvconvert supports VDO options for thin-pool with vdo conversion.
  Improve placement to .data.rel.ro and .rodata sections.
  Fix support for -y and -W when creating thinpool with vdo.
  Better support for runtime valgrind detection.